--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.4",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "typescript": "^3.6.2"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/mongoose": "^5.5.8",
     "@types/morgan": "^1.7.35",
